added CardSet edit method
